# engine_test

./: .clang-format  .gitignore  CMakeLists.txt
engine/: BaseObject.cpp  Core.cpp  Engine.h  Log.cpp  Renderer.cpp  Util.cpp
game/: Game.cpp  Game.h  Main.cpp
shader/: basic.frag
